ingress/joomla-traefik-ingress/joomla-traefik-ingressRoute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: joomla
  namespace: joomla
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`wiki.lala-1992.xyz`)
      priority: 10
      services:
        - name: joomla
          port: 80
    - kind: Rule
      match: Host(`wiki.lala-1992.xyz`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: joomla
          port: 80
          scheme: h2c
          # tls:
          # certResolver: cloudflare
